err/csc-utils.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/csc'...
Listing './lib/python3.5/site-packages/csc/conceptnet'...
Listing './lib/python3.5/site-packages/csc/conceptnet4'...
Listing './lib/python3.5/site-packages/csc/concepttools'...
Listing './lib/python3.5/site-packages/csc/corpus'...
Listing './lib/python3.5/site-packages/csc/corpus/parse'...
Listing './lib/python3.5/site-packages/csc/divisi2'...
Listing './lib/python3.5/site-packages/csc/divisi2/algorithms'...
Listing './lib/python3.5/site-packages/csc/django_settings'...
Listing './lib/python3.5/site-packages/csc/lib'...
Listing './lib/python3.5/site-packages/csc/lib/events'...
Listing './lib/python3.5/site-packages/csc/lib/voting'...
Listing './lib/python3.5/site-packages/csc/lib/voting/templatetags'...
Listing './lib/python3.5/site-packages/csc/nl'...
Listing './lib/python3.5/site-packages/csc/nl/ar'...
Listing './lib/python3.5/site-packages/csc/nl/en'...
Listing './lib/python3.5/site-packages/csc/nl/es'...
Listing './lib/python3.5/site-packages/csc/nl/fi'...
Listing './lib/python3.5/site-packages/csc/nl/fr'...
Listing './lib/python3.5/site-packages/csc/nl/hu'...
Listing './lib/python3.5/site-packages/csc/nl/it'...
Listing './lib/python3.5/site-packages/csc/nl/ja'...
Listing './lib/python3.5/site-packages/csc/nl/ja_cabocha'...
Listing './lib/python3.5/site-packages/csc/nl/ko'...
Listing './lib/python3.5/site-packages/csc/nl/mblem'...
Listing './lib/python3.5/site-packages/csc/nl/nl'...
Listing './lib/python3.5/site-packages/csc/nl/pt'...
Listing './lib/python3.5/site-packages/csc/nl/zh'...
Listing './lib/python3.5/site-packages/csc/pseudo_auth'...
Listing './lib/python3.5/site-packages/csc/util'...
Listing './lib/python3.5/site-packages/csc/webapi'...
Listing './lib/python3.5/site-packages/csc/webapi/templatetags'...
Listing './lib/python3.5/site-packages/csc_utils'...
Compiling './lib/python3.5/site-packages/csc_utils/dict_mixin.py'...
***   File "./lib/python3.5/site-packages/csc_utils/dict_mixin.py", line 83
    raise TypeError, "pop expected at most 2 arguments, got "\
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/csc_utils/priodict.py'...
***   File "./lib/python3.5/site-packages/csc_utils/priodict.py", line 30
    raise IndexError, "smallest of empty priorityDictionary"
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/csc_utils-0.6.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
